--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
     "dotenv": "^16.4.5",
+    "hardhat-shorthand": "^1.0.0",
     "http-server": "^14.1.1",
     "web3": "^4.6.0"
+  },
+  "devDependencies": {
+    "hardhat": "^2.22.1"
   }
 }
